[gd_scene load_steps=11 format=3 uid="uid://cws63lnwpdthq"]

[ext_resource type="Script" path="res://scripts/level_end_ui.gd" id="1_g8mla"]
[ext_resource type="Texture2D" uid="uid://xkpc8o32hsfv" path="res://assets/art/ui/level_screen_background.png" id="1_ketkt"]
[ext_resource type="Texture2D" uid="uid://d0vmgc1ydvafi" path="res://assets/art/ui/empty_star.png" id="2_yfoid"]
[ext_resource type="Texture2D" uid="uid://b2fjk0tel2owc" path="res://assets/art/ui/full_star.png" id="3_qy85k"]
[ext_resource type="Texture2D" uid="uid://6o2eei7r8biv" path="res://assets/art/ui/retry_button.png" id="4_xmtqc"]
[ext_resource type="Texture2D" uid="uid://c1bstoevf4r2h" path="res://assets/art/ui/retry_button_grey.png" id="5_6tccj"]
[ext_resource type="Texture2D" uid="uid://c30bdorcnqfrq" path="res://assets/art/ui/home_button.png" id="5_qeruw"]
[ext_resource type="Texture2D" uid="uid://nhm3ya3p6ugy" path="res://assets/art/ui/next_level_button.png" id="6_hi12v"]
[ext_resource type="Texture2D" uid="uid://ojnh21bdoiut" path="res://assets/art/ui/home_button_grey.png" id="7_1d6p0"]
[ext_resource type="Texture2D" uid="uid://bryriqitr5y83" path="res://assets/art/ui/next_level_button_grey.png" id="9_ooqyc"]

[node name="LevelEndUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8mla")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ketkt")

[node name="StarSlots" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -137.0
offset_right = 83.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="EmptyStar" type="TextureRect" parent="StarSlots"]
layout_mode = 2
texture = ExtResource("2_yfoid")

[node name="EmptyStar2" type="TextureRect" parent="StarSlots"]
layout_mode = 2
texture = ExtResource("2_yfoid")

[node name="EmptyStar3" type="TextureRect" parent="StarSlots"]
layout_mode = 2
texture = ExtResource("2_yfoid")

[node name="EmptyStar4" type="TextureRect" parent="StarSlots"]
layout_mode = 2
texture = ExtResource("2_yfoid")

[node name="EmptyStar5" type="TextureRect" parent="StarSlots"]
layout_mode = 2
texture = ExtResource("2_yfoid")

[node name="Stars" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -137.0
offset_right = 83.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="Star1" type="TextureRect" parent="Stars"]
layout_mode = 2
texture = ExtResource("3_qy85k")

[node name="Star2" type="TextureRect" parent="Stars"]
layout_mode = 2
texture = ExtResource("3_qy85k")

[node name="Star3" type="TextureRect" parent="Stars"]
layout_mode = 2
texture = ExtResource("3_qy85k")

[node name="Star4" type="TextureRect" parent="Stars"]
layout_mode = 2
texture = ExtResource("3_qy85k")

[node name="Star5" type="TextureRect" parent="Stars"]
layout_mode = 2
texture = ExtResource("3_qy85k")

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.0
offset_top = 90.0
offset_right = 77.0
offset_bottom = 148.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 56
text = "Level 1"

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.877
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -64.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0

[node name="Retry" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("4_xmtqc")
texture_pressed = ExtResource("5_6tccj")

[node name="VSeparator" type="VSeparator" parent="Buttons"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="Home" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("5_qeruw")
texture_pressed = ExtResource("7_1d6p0")

[node name="VSeparator2" type="VSeparator" parent="Buttons"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="Next" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("6_hi12v")
texture_pressed = ExtResource("9_ooqyc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.5
offset_top = 7.0
offset_right = 313.5
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ClockCycleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Clock cycles utilized: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Real-time elapsed: 0 mins, 0 secs"
horizontal_alignment = 1

[connection signal="pressed" from="Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Buttons/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Buttons/Next" to="." method="_on_next_pressed"]
